# search-tool-provider

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/search_tool_provider/: __init__.py  exceptions.py  models.py  provider.py  registry.py  utils.py
src/search_tool_provider/admin/: app.py  env_writer.py
src/search_tool_provider/admin/static/: style.css
src/search_tool_provider/admin/templates/: base.html  config.html  dashboard.html  setup.html
src/search_tool_provider/cli/: app.py
src/search_tool_provider/mcp/: config.py  server.py
src/search_tool_provider/providers/: __init__.py  bing.py  brave.py  duckduckgo.py  fallback.py  google_cse.py  serper.py  tavily.py
tests/: test_admin_api.py  test_duckduckgo.py  test_env_writer.py  test_fallback.py  test_google_cse.py  test_http_providers.py  test_models.py  test_public_api.py  test_registry.py  test_utils.py
